Addtional components and routing

--- a/force-app/main/default/classes/LocationsController.cls
+++ b/force-app/main/default/classes/LocationsController.cls
@@ -1,11 +1,11 @@
 public inherited sharing class LocationsController {
-    @AuraEnabled
-    public static list<Sessions__c> getLocations(String searchKey){
-        List<Sessions__c> locationResults = new List<Sessions__c>();
+    @AuraEnabled(cacheable=true)
+    public static list<Custom_Location__c> getLocations(String searchKey){
+        List<Custom_Location__c> locationResults = new List<Custom_Location__c>();
         try {
             searchKey = '%' + searchKey + '%';
-            locationResults = [SELECT Location__c 
-                                                    FROM Sessions__c
+            locationResults = [SELECT Id, Location__c 
+                                                    FROM Custom_Location__c
                                                     WHERE Location__c LIKE :searchKey];
             if(locationResults.isEmpty()) {
                 throw new AuraHandledException('Location not found, try a new location ...');
